--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avengers Assemble Watch Party</title>
+    <title>Mr. Zero's Binge Server</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
@@ -19,9 +19,9 @@
     <!-- Splash Screen / Login -->
     <div id="splashScreen" class="splash-screen">
         <div class="avengers-logo">
-            <img src="https://i.imgur.com/xZoZhd8.png" alt="Avengers Logo">
+            <img src="https://th.bing.com/th/id/OIP.ttHEY1wfPYOBywPwB_ogEgHaHf?rs=1&pid=ImgDetMain" alt="Avengers Logo">
         </div>
-        <h1>AVENGERS WATCH PARTY</h1>
+        <h1>Mr. Zero's Binge Server</h1>
         <div class="login-container">
             <input type="text" id="nameInput" placeholder="Enter your codename..." maxlength="15">
             <div class="room-controls">
